--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/code-editor"]
 	path = themes/code-editor
 	url = https://github.com/aubm/hugo-code-editor-theme.git
+[submodule "public"]
+	path = public
+	url = https://github.com/cr6588/cr6588.github.io.git
