--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,6 @@
 baseURL = "https://cr6588.github.io/"
 languageCode = "en-us"
 title = "Hugo Study"
+author = "chenyi"
+disqusShortname = "https-cr6588-github-io"
 theme = "code-editor"
