--- a/config.toml
+++ b/config.toml
@@ -38,17 +38,13 @@ home = [ "HTML", "RSS", "JSON"]
 pre = "<h3>More</h3>"
 name = "<i class='fa fa-github'></i> <label>Github repo</label>"
 identifier = "ds"
-url = "https://github.com/vjeantet/hugo-theme-docdock"
+url = "https://github.com/cr6588/docs"
 weight = 10
 
-[[menu.shortcuts]]
-name = "<i class='fa fa-cloud-download'></i> <label>Download</label>"
-url = "https://github.com/vjeantet/hugo-theme-docdock/archive/master.zip"
-weight = 11
 
 [[menu.shortcuts]]
-name = "<i class='fa fa-bookmark'></i> <label>Hugo Document</label>"
+name = "<i class='fa fa-bookmark'></i> <label>About</label>"
 identifier = "hugodoc"
-url = "https://gohugo.io/"
+url = "/about"
 weight = 20
 
