--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/aubm/hugo-code-editor-theme.git
 [submodule "public"]
 	path = public
-	url = https://github.com/cr6588/cr6588.github.io.git
+	url = git@github.com:cr6588/cr6588.github.io.git
 [submodule "themes/docdock"]
 	path = themes/docdock
 	url = https://github.com/vjeantet/hugo-theme-docdock.git
